[gd_scene load_steps=2 format=2]

[ext_resource path="res://Common/lookatMeArea/LookAtMeArea.gd" type="Script" id=1]

[node name="LookAtMe" type="Area"]
collision_layer = 64
collision_mask = 64
script = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_LookAtMe_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_LookAtMe_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_LookAtMe_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LookAtMe_body_exited"]
